[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "f-yeah"
version = "0.4.0"
description = "Reusable f-strings"
authors = [{name = "Jeremiah Paige", email = "ucodery@gmail.com"}]
license = {file = "LICENSE.txt"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12"
classifiers = ["License :: OSI Approved :: BSD License"]

[project.urls]
Home = "https://github.com/ucodery/fyeah"

[tool.setuptools]
packages = ["fyeah"]

[tool.ruff.format]
quote-style = "single"

[tool.portray.mkdocs.theme]
name = "material"
favicon = "art/logo.png"
logo = "art/logo.png"
palette = {primary = "black", accent = "gray"}
